DEC-58: extend post preview window to 830px, double scrolls fix, add padding to images

--- a/projects/charon/src/app/hub/components/hub-post-dialog/hub-post-dialog.component.scss
+++ b/projects/charon/src/app/hub/components/hub-post-dialog/hub-post-dialog.component.scss
@@ -34,6 +34,7 @@ $hub-post-dialog--background-color: #FFFFFF;
 
 .hub-post-dialog__content {
   margin-top: 16px;
+  max-height: 500px;
 }
 
 .hub-post-dialog__divider {
